Enabling the potentials of the Event node